- reader_mps is now abled to write and constraints in form of their (weak/strict) relaxation
- added possibility to forbid constraint upgrading
- it is now possible to add an offset for the original problem instance, all original solutions will be initialized with
  this value and updated, when the offset is changed
- added clique presolving for xor constraints

performance improvements:
- conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
  constraint and the corresponding clique information is globally added
- improved methods SCIPlpiGetBInv{Row,Col,ACol} for row representation in SoPlex LP interface
- fasten repropagation for set-packing and -partitioning constraints
- shorten conflicts and deriving global boundchanges from conflicts
- disabled multi-aggregation in linear constraint handler when coefficients differ too much
- improved multi-aggregation in linear constraint handler when only one variable in the aggregation has infinity
  contribution
- improved dual-presolving for setppc constraints in special cases
- apply lowerbound provided by pricers already during pricing loop, stop pricing if the lower bound computed by pricing
  already exceeds the cutoff bound
- improved performance of method SCIPsolRetransform() when called during presolving with many aggregations
- minor presolving performance improvements in cons_logicor.c and cons_knapsack.c
- added upgradability for implicit binary variable cases for linear constraints
- improved performance of SCIPcliquelistDel(), SCIPcliquetableAdd(), SCIPcliquetableCleanup()
- improved merging of constraints in cons_and.c

interface
- SCIPgetLPBranchCands() can be used to retrieve the number of implicit integer variables with fractional LP solution
  value via an additional pointer; the corresponding implicit integer variables can be accessed together with their 